style fix to make wrapping better on small desktops

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -184,8 +184,8 @@ button.NormalAnnouncementBubble--deleteMenuItem {
 
 .NormalAnnouncementBubble--translatedLanguages--container {
   margin-top: 1rem;
-  width: 100%;
   .flex--direction--row();
+  .flex--grow;
 
   &:hover .NormalAnnouncementBubble--translatedLanguages--text--desktop {
     color: @primary_blue_shade_2;
@@ -223,8 +223,8 @@ button.NormalAnnouncementBubble--deleteMenuItem {
 
 .NormalAnnouncementBubble--readReceipts--container {
   margin-top: 1rem;
-  width: 100%;
   .flex--direction--row();
+  .flex--grow;
 
   &:hover .NormalAnnouncementBubble--readReceipts--icon {
     .pathColor(@primary_blue_shade_2);
